# hd-kyma-dub-enhanced

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  idea.txt  pyproject.toml  requirements.txt  setup.py
agent/: main.py  orchestrator.py
agent/memory/: memory_manager.py
agent/modules/: asr_transcriber.py  lipsync_engine.py  mos_evaluator.py  script_translator.py  tts_synthesizer.py
agent/tools/: video_processor.py
ai_layer/patches/: kyma_dub_ai_integration.md
config/: .env.example  agent_config.yaml
docker/: Dockerfile  docker-compose.yml
tests/: test-scenarios.md  test_agent.py
tools/: hf_model_manager.py  knowledge_updater.py  llm_client.py
upstream/: README.md
