[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyma-dub-enhanced"
version = "1.0.0"
description = "Autonomous neural dubbing platform with voice cloning and lip-sync"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "kyma-dub-enhanced contributors"}
]
keywords = ["dubbing", "tts", "voice-cloning", "lip-sync", "whisper", "neural"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "aiohttp>=3.9.5",
    "python-dotenv>=1.0.1",
    "apscheduler>=3.10.4",
    "openai-whisper>=20231117",
    "faster-whisper>=1.0.0",
    "transformers>=4.41.0",
    "torch>=2.3.0",
    "sentencepiece>=0.2.0",
    "deep-translator>=1.11.4",
    "TTS>=0.22.0",
    "bark>=0.1.5",
    "pyttsx3>=2.90",
    "soundfile>=0.12.1",
    "scipy>=1.13.0",
    "librosa>=0.10.2",
    "numpy>=1.26.4",
    "opencv-python-headless>=4.9.0",
    "sentence-transformers>=3.0.1",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
kyma-dub = "agent.main:cli"

[project.urls]
Homepage = "https://github.com/your-org/kyma-dub-enhanced"
Documentation = "https://github.com/your-org/kyma-dub-enhanced/blob/main/README.md"
Repository = "https://github.com/your-org/kyma-dub-enhanced"
Issues = "https://github.com/your-org/kyma-dub-enhanced/issues"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | ENV
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    "build",
    "dist",
    "upstream",
]

[tool.coverage.run]
source = ["agent", "tools"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
